# riptide

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
buoy/: Cargo.toml
core/: Cargo.toml  README.md  design.md  requirements.md  settypes.md
core/src/: main.rs
core/src/actors/: cli.rs  mod.rs  tui.rs  user.rs  view.rs
dock/src/data/: mod.rs  pipeline.rs
log/: challenges.md
sail/: Cargo.toml
sail/examples/: data.csv
sail/src/: lib.rs  main.rs.archive
sail/src/actors/: mod.rs  perceptron.rs  segmentation_engine.rs
sail/src/app/: mod.rs
sail/src/util/: colors.rs  mod.rs
