[package]
name = "polars_ex"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = "0.18.0"
burn-dataset = "0.18.0"
clap = "4.5.40"
color-eyre = "0.6.5"
crossterm = "0.29.0"
csv = "1.3.1"
e57 = "0.11.10"
fakeit = "1.3.0"
features = "0.10.0"
itertools = "0.14.0"
polars = { version = "0.41.3", features = ["csv", "lazy", "describe"] }
ratatui = { version = "0.29.0", features = ["all-widgets"] }
serde = "1.0.215"
serde_json = "1.0.140"
textplots = "0.8.6"
thiserror = "2.0.16"
unicode-width = "0.2.0"
